--- a/views/user/catogory.ejs
+++ b/views/user/catogory.ejs
@@ -422,50 +422,7 @@
                 <div class="tab-content">
                   <div id="new-arrivals">
                     <div class="row showcat">
-                      <% products.forEach(product => { %>
-                        
-                        <div class="singprod tab-pane active single-product col-xl-3 col-lg-4 col-md-6"
-        data-price="<%= product.price %>"
-        data-name="<%= product.name %>"
-        data-colors="<%= product.colors %>">
-                            <div class="product-img">
-                            
-                                <a href="/user/product/<%= product.name %>"><img src="<%= product.images[0] %>" alt="<%= product.name %>" /></a>
-                                <div class="product-action clearfix">
-                                    <a href="javascript:void(0)" 
-                                        onclick="toggleWishlist(this, '<%= product._id %>')" 
-                                        class="wishlist-icon" 
-                                        data-product-id="<%= product._id %>">
-                                        <i class="zmdi zmdi-favorite-outline"></i>
-                                    </a>
-                                    <a href="#" data-bs-toggle="modal" data-bs-target="#productModal" title="Quick View"><i class="zmdi zmdi-zoom-in"></i></a>
-                                    <a href="#" data-bs-toggle="tooltip" data-placement="top" title="Compare"><i class="zmdi zmdi-refresh"></i></a>
-                                    <a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
-                                </div>
-                            </div>
-                            <div class="product-info clearfix">
-                                <div class="fix">
-                                    <h4 class="post-title floatleft"><a href="/user/product/<%= product.name %>"><%= product.name %></a></h4>
-                                </div>
-                                <div class="fix">
-                                    <% if (product.offer && product.offer > 0) { %>
-                                        <% const discountedPrice = Math.floor(product.price - (product.price * product.offer / 100)) %>
-                                        <span class="pro-price floatleft">₹<%= discountedPrice %></span>
-                                        <span class="original-price floatleft">₹<%= Math.floor(product.price) %></span>
-                                    <% } else { %>
-                                        <span class="pro-price floatleft">₹<%= Math.floor(product.price) %></span>
-                                    <% } %>
-                                    <span class="pro-rating floatright">
-                                        <a href="#"><i class="zmdi zmdi-star"></i></a>
-                                        <a href="#"><i class="zmdi zmdi-star"></i></a>
-                                        <a href="#"><i class="zmdi zmdi-star"></i></a>
-                                        <a href="#"><i class="zmdi zmdi-star-half"></i></a>
-                                        <a href="#"><i class="zmdi zmdi-star-half"></i></a>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <% }) %>
+                    
                         
                     </div>
                   </div>
@@ -855,6 +812,17 @@ function updatePagination(pagination) {
     `;
 
     paginationContainer.innerHTML = paginationHTML;
+}
+
+function clearAllFilters() {
+    // Reset category dropdown to "All Categories"
+    document.getElementById('categorySelect').value = '';
+    
+    // Reset sort dropdown to "Default"
+    document.getElementById('sortSelect').value = '';
+    
+    // Trigger search to refresh products
+    SFSP();
 }
 
 </script>
