--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -151,14 +151,7 @@
 																			%>
 																			<div class="singprod tab-pane active single-product col-xl-3 col-lg-4 col-md-6 <%= product.category %>">
 																					<div class="product-img">
-																							
-																							<a href="single-product.html"><img src="<%= product.images[0] %>" alt="<%= product.name %>" /></a>
-																							<div class="product-action clearfix">
-																									<a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Wishlist"><i class="zmdi zmdi-favorite-outline"></i></a>
-																									<a href="#" data-bs-toggle="modal" data-bs-target="#productModal" title="Quick View"><i class="zmdi zmdi-zoom-in"></i></a>
-																									<a href="#" data-bs-toggle="tooltip" data-placement="top" title="Compare"><i class="zmdi zmdi-refresh"></i></a>
-																									<a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
-																							</div>
+																							<a href="/user/product/<%= product.name %>"><img src="<%= product.images[0] %>" alt="<%= product.name %>" /></a>
 																					</div>
 																					<div class="product-info clearfix">
 																							<div class="fix">
