--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -594,7 +594,7 @@
 			<header class="e-commerce-header">
 				<div class="header-top">
 					<div class="logo-section">
-						<a href="/user/home" class="logo">WARDROBE</a>
+						<a href="/user" class="logo">WARDROBE</a>
 					</div>
 					<div class="search-section">
 						<div class="search-container">
