--- a/views/user/checkoutfailed.ejs
+++ b/views/user/checkoutfailed.ejs
@@ -128,7 +128,7 @@
             <p><strong>Order ID:</strong> <%=id%></p>
             <p>Your payment could not be processed. Please verify your payment information and try again from your orders page.</p>
         </div>
-        <button class="action-btn" onclick="window.location.href='/user/home'">
+        <button class="action-btn" onclick="window.location.href='/user'">
             Go to Home
         </button>
     </div>
