--- a/views/user/productview.ejs
+++ b/views/user/productview.ejs
@@ -766,7 +766,7 @@
 									</div>
 									<div class="breadcumbs pb-15">
 										<ul>
-											<li><a href="/user/home">Home</a></li>
+											<li><a href="/user">Home</a></li>
 											<li><a href="/user/shop">shop</a></li>
 											<li><a href="/user/shop/<%= product.category %>"><%= product.category %></a></li>
 											<li><%= product.name %></li>
